function(add_example)
   add_executable(${ARGV0} ${ARGV0}.cxx)
   target_include_directories(${ARGV0} PUBLIC Netxx)
   target_link_libraries(${ARGV0} PUBLIC Netxx)
endfunction()

if(BUILD_EXAMPLES)
   add_example(http_get)
   add_example(multi_server)
   add_example(streambuf_echo_client)
   add_example(tcp_daytime_client)
   add_example(tcp_echo_client)
   add_example(tcp_echo_server)
   add_example(udp_daytime_client)
   add_example(udp_echo_client)
   add_example(udp_echo_server)

   if(ENABLE_TLS)
      add_example(http_https_server)
      add_example(https_get)
      add_example(tls_echo_client)
      add_example(tls_echo_server)
   endif()
endif()

